Spark separate service (I303).